@@ -41,6 +41,8 @@ faxdetect=off    ;enable faxdetection and redirection to EXTEN 'fax' for incomin
                  ;outgoing calls. (default='off', possible values: 'incoming','outgoing','both')
 faxdetecttime=0  ;Only detect faxes during the first 'n' seconds of the call.
                  ;(default '0' meaning for the whole duration of the call)
+faxdestination=custom-fax,fax,1 ;Set custom context, exten and priority to jump to on faxdetect.
+                 ;Default is "<current-context>,fax,1".
 accountcode=     ;PBX accountcode to use in CDRs
 ;amaflags=default;AMA flags for CDR ('default', 'omit', 'billing', or 'documentation')
 context=isdn-in  ;context for incoming calls
